fixing div.a-media-selected-overlay not showing up on adding, removing slideshow selection
git-svn-id: http://svn.apostrophenow.org/plugins/apostrophePlugin/branches/features@1891 c89fab08-2f9b-42bf-8176-bd3ad6bee547

--- a/cropping/web/css/a.css
+++ b/cropping/web/css/a.css
@@ -4039,13 +4039,16 @@ float: left;
 
 li.a-media-selection-preview-item {
   display:none;
-	float:left;
 	position:relative;
 	width:auto;
 	height:auto;
 }
 li.a-media-selection-preview-item.current {
   display: block !important;
+}
+
+li.a-media-selection-preview-item .jcrop-holder {
+  margin: 0 auto;
 }
 
 .a-media-crop-controls
@@ -4072,7 +4075,6 @@ li.a-media-selection-preview-item.current {
 	-webkit-border-bottom-right-radius: 4px;
 	-webkit-border-bottom-left-radius: 4px;
 	border-radius: 4px;
-	
 }
 
 .a-crop-workspace h4
